src/main/java/org/code/AtresParser.java
// Generated from C:/Users/nandi/Desktop/aula03CGRV/atres/src/main/java/org/code/Atres.g4 by ANTLR 4.13.1
package org.code;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AtresParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, INICIO=2, TIPO=3, ESCREVA=4, ENTRADA=5, DECLARAR=6, SE=7, 
		SENAO=8, WHILE=9, FOR=10, FIM=11, STRING_DEF=12, INTEIRO_DEF=13, RACIONAL_DEF=14, 
		BOOLEAN_DEF=15, OP_ATRIB=16, OP_SOMA=17, OP_SUB=18, OP_MULT=19, OP_DIV=20, 
		BOOL_E=21, BOOL_OU=22, OP_RELAC=23, AB_PAR=24, FC_PAR=25, AB_CHAVE=26, 
		FC_CHAVE=27, PV=28, COMENTARIO=29, ID=30, NUM_INT=31, NUM_REAL=32, WS=33;
	public static final int
		RULE_programa = 0, RULE_declaracao = 1, RULE_var_decl = 2, RULE_var_atrib = 3, 
		RULE_comando = 4, RULE_cmdEntrada = 5, RULE_cmdSaida = 6, RULE_cmdCondicao = 7, 
		RULE_comparacao = 8, RULE_variavel = 9, RULE_string = 10, RULE_cmdRept = 11, 
		RULE_while = 12, RULE_for = 13, RULE_exprMat = 14, RULE_number = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao", "var_decl", "var_atrib", "comando", "cmdEntrada", 
			"cmdSaida", "cmdCondicao", "comparacao", "variavel", "string", "cmdRept", 
			"while", "for", "exprMat", "number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'inicio'", null, "'escreva'", "'entrada'", "'declaracao'", 
			"'se'", "'senao'", "'while'", "'for'", "'fim'", null, null, null, null, 
			"'='", "'+'", "'-'", "'*'", "'/'", "'e'", "'ou'", null, "'('", "')'", 
			"'{'", "'}'", "';'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "INICIO", "TIPO", "ESCREVA", "ENTRADA", "DECLARAR", 
			"SE", "SENAO", "WHILE", "FOR", "FIM", "STRING_DEF", "INTEIRO_DEF", "RACIONAL_DEF", 
			"BOOLEAN_DEF", "OP_ATRIB", "OP_SOMA", "OP_SUB", "OP_MULT", "OP_DIV", 
			"BOOL_E", "BOOL_OU", "OP_RELAC", "AB_PAR", "FC_PAR", "AB_CHAVE", "FC_CHAVE", 
			"PV", "COMENTARIO", "ID", "NUM_INT", "NUM_REAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Atres.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AtresParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(AtresParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public TerminalNode AB_CHAVE() { return getToken(AtresParser.AB_CHAVE, 0); }
		public TerminalNode FC_CHAVE() { return getToken(AtresParser.FC_CHAVE, 0); }
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(PROGRAMA);
			setState(33);
			match(ID);
			setState(34);
			match(AB_CHAVE);
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(35);
					declaracao();
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1090938520L) != 0)) {
				{
				{
				setState(41);
				comando();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(FC_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Var_atribContext var_atrib() {
			return getRuleContext(Var_atribContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		try {
			setState(51);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				var_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				var_atrib();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode TIPO() { return getToken(AtresParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(TIPO);
			setState(54);
			match(ID);
			setState(55);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_atribContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public TerminalNode OP_ATRIB() { return getToken(AtresParser.OP_ATRIB, 0); }
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public ExprMatContext exprMat() {
			return getRuleContext(ExprMatContext.class,0);
		}
		public TerminalNode TIPO() { return getToken(AtresParser.TIPO, 0); }
		public Var_atribContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_atrib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterVar_atrib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitVar_atrib(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitVar_atrib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_atribContext var_atrib() throws RecognitionException {
		Var_atribContext _localctx = new Var_atribContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_atrib);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIPO) {
				{
				setState(57);
				match(TIPO);
				}
			}

			setState(60);
			match(ID);
			setState(61);
			match(OP_ATRIB);
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(62);
				variavel();
				}
				break;
			case 2:
				{
				setState(63);
				exprMat(0);
				}
				break;
			}
			setState(66);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public CmdEntradaContext cmdEntrada() {
			return getRuleContext(CmdEntradaContext.class,0);
		}
		public CmdSaidaContext cmdSaida() {
			return getRuleContext(CmdSaidaContext.class,0);
		}
		public CmdCondicaoContext cmdCondicao() {
			return getRuleContext(CmdCondicaoContext.class,0);
		}
		public CmdReptContext cmdRept() {
			return getRuleContext(CmdReptContext.class,0);
		}
		public Var_atribContext var_atrib() {
			return getRuleContext(Var_atribContext.class,0);
		}
		public ExprMatContext exprMat() {
			return getRuleContext(ExprMatContext.class,0);
		}
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comando);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				cmdEntrada();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				cmdSaida();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				cmdCondicao();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				cmdRept();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				var_atrib();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				exprMat(0);
				setState(74);
				match(PV);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEntradaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public TerminalNode OP_ATRIB() { return getToken(AtresParser.OP_ATRIB, 0); }
		public TerminalNode ENTRADA() { return getToken(AtresParser.ENTRADA, 0); }
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public CmdEntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEntrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterCmdEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitCmdEntrada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitCmdEntrada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdEntradaContext cmdEntrada() throws RecognitionException {
		CmdEntradaContext _localctx = new CmdEntradaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdEntrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID);
			setState(79);
			match(OP_ATRIB);
			setState(80);
			match(ENTRADA);
			setState(81);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdSaidaContext extends ParserRuleContext {
		public TerminalNode ESCREVA() { return getToken(AtresParser.ESCREVA, 0); }
		public TerminalNode AB_PAR() { return getToken(AtresParser.AB_PAR, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode FC_PAR() { return getToken(AtresParser.FC_PAR, 0); }
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public CmdSaidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdSaida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterCmdSaida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitCmdSaida(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitCmdSaida(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdSaidaContext cmdSaida() throws RecognitionException {
		CmdSaidaContext _localctx = new CmdSaidaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdSaida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ESCREVA);
			setState(84);
			match(AB_PAR);
			setState(85);
			string();
			setState(86);
			match(FC_PAR);
			setState(87);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdCondicaoContext extends ParserRuleContext {
		public List<TerminalNode> SE() { return getTokens(AtresParser.SE); }
		public TerminalNode SE(int i) {
			return getToken(AtresParser.SE, i);
		}
		public List<TerminalNode> AB_PAR() { return getTokens(AtresParser.AB_PAR); }
		public TerminalNode AB_PAR(int i) {
			return getToken(AtresParser.AB_PAR, i);
		}
		public List<ComparacaoContext> comparacao() {
			return getRuleContexts(ComparacaoContext.class);
		}
		public ComparacaoContext comparacao(int i) {
			return getRuleContext(ComparacaoContext.class,i);
		}
		public List<TerminalNode> FC_PAR() { return getTokens(AtresParser.FC_PAR); }
		public TerminalNode FC_PAR(int i) {
			return getToken(AtresParser.FC_PAR, i);
		}
		public List<TerminalNode> AB_CHAVE() { return getTokens(AtresParser.AB_CHAVE); }
		public TerminalNode AB_CHAVE(int i) {
			return getToken(AtresParser.AB_CHAVE, i);
		}
		public List<TerminalNode> FC_CHAVE() { return getTokens(AtresParser.FC_CHAVE); }
		public TerminalNode FC_CHAVE(int i) {
			return getToken(AtresParser.FC_CHAVE, i);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> SENAO() { return getTokens(AtresParser.SENAO); }
		public TerminalNode SENAO(int i) {
			return getToken(AtresParser.SENAO, i);
		}
		public CmdCondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdCondicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterCmdCondicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitCmdCondicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitCmdCondicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdCondicaoContext cmdCondicao() throws RecognitionException {
		CmdCondicaoContext _localctx = new CmdCondicaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdCondicao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(SE);
			setState(90);
			match(AB_PAR);
			setState(91);
			comparacao();
			setState(92);
			match(FC_PAR);
			setState(93);
			match(AB_CHAVE);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1090938520L) != 0)) {
				{
				{
				setState(94);
				comando();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(FC_CHAVE);
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(101);
				match(SENAO);
				setState(102);
				match(SE);
				setState(103);
				match(AB_PAR);
				setState(104);
				comparacao();
				setState(105);
				match(FC_PAR);
				setState(106);
				match(AB_CHAVE);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1090938520L) != 0)) {
					{
					{
					setState(107);
					comando();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				match(FC_CHAVE);
				}
				break;
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(117);
				match(SENAO);
				setState(118);
				match(AB_CHAVE);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1090938520L) != 0)) {
					{
					{
					setState(119);
					comando();
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				match(FC_CHAVE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparacaoContext extends ParserRuleContext {
		public List<VariavelContext> variavel() {
			return getRuleContexts(VariavelContext.class);
		}
		public VariavelContext variavel(int i) {
			return getRuleContext(VariavelContext.class,i);
		}
		public TerminalNode OP_RELAC() { return getToken(AtresParser.OP_RELAC, 0); }
		public ComparacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterComparacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitComparacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitComparacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparacaoContext comparacao() throws RecognitionException {
		ComparacaoContext _localctx = new ComparacaoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comparacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			variavel();
			setState(129);
			match(OP_RELAC);
			setState(130);
			variavel();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariavelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public TerminalNode INTEIRO_DEF() { return getToken(AtresParser.INTEIRO_DEF, 0); }
		public TerminalNode RACIONAL_DEF() { return getToken(AtresParser.RACIONAL_DEF, 0); }
		public TerminalNode BOOLEAN_DEF() { return getToken(AtresParser.BOOLEAN_DEF, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variavel);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(ID);
				}
				break;
			case INTEIRO_DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(INTEIRO_DEF);
				}
				break;
			case RACIONAL_DEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(RACIONAL_DEF);
				}
				break;
			case BOOLEAN_DEF:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				match(BOOLEAN_DEF);
				}
				break;
			case STRING_DEF:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> STRING_DEF() { return getTokens(AtresParser.STRING_DEF); }
		public TerminalNode STRING_DEF(int i) {
			return getToken(AtresParser.STRING_DEF, i);
		}
		public List<TerminalNode> OP_SOMA() { return getTokens(AtresParser.OP_SOMA); }
		public TerminalNode OP_SOMA(int i) {
			return getToken(AtresParser.OP_SOMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(AtresParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AtresParser.ID, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AtresVisitor ) return ((AtresVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
